# mongo-glib

./: .gitignore  Makefile.am  Makefile.include  NEWS  README  README.md  TODO.md  autogen.sh  configure.ac  mongo-glib.spec.in
doc/: .gitignore  Makefile.am  mongo-glib-docs.sgml
examples/: bson_tests.py  server.c  server.py  simple.js  simple.py
mongo-glib/: .gitignore  Makefile.include  mongo-bson-stream.c  mongo-bson-stream.h  mongo-bson.c  mongo-bson.h  mongo-client.c  mongo-client.h  mongo-collection.c  mongo-collection.h  mongo-connection.c  mongo-connection.h  mongo-cursor.c  mongo-cursor.h  mongo-database.c  mongo-database.h  mongo-debug.h  mongo-delete.c  mongo-delete.h  mongo-flags.c  mongo-flags.h  mongo-getmore.c  mongo-glib.h  mongo-input-stream.c  mongo-input-stream.h  mongo-insert.c  mongo-insert.h  mongo-kill-cursors.c  mongo-manager.c  mongo-manager.h  mongo-message-delete.c  mongo-message-getmore.c  mongo-message-insert.c  mongo-message-insert.h  mongo-message-kill-cursors.c  mongo-message-msg.c  mongo-message-query.c  mongo-message-query.h  mongo-message-reply.c  mongo-message-reply.h  (+22 more)
ops/: main.c  mongo-bson.c  mongo-client-context.h  mongo-flags.c  mongo-flags.h  mongo-getmore.h  mongo-insert.h  mongo-kill-cursors.h  mongo-message.c  mongo-message.h  mongo-msg.h  mongo-query.c  mongo-query.h  mongo-reply.c  mongo-reply.h  mongo-server.c  mongo-server.h
tests/: Makefile.include  test-mongo-bson.c  test-mongo-client.c  test-mongo-collection.c  test-mongo-connection.c  test-mongo-cursor.c  test-mongo-input-stream.c  test-mongo-manager.c  test-mongo-object-id.c  test-mongo-output-stream.c  test-mongo-protocol.c
tests/capture/: capture.recv
